; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_99.c_getShit.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_99.c_getShit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@getShit.buff = internal global [1024 x i8] zeroinitializer, align 16
@.str = private unnamed_addr constant [2 x i8] c"r\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"popen\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @getShit(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = call i32* @popen(i8* %4, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32* %5, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = call i32 @perror(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  %10 = call i32 @exit(i32 0) #3
  unreachable

11:                                               ; preds = %1
  store i8 0, i8* getelementptr inbounds ([1024 x i8], [1024 x i8]* @getShit.buff, i64 0, i64 0), align 16
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @fgets(i8* getelementptr inbounds ([1024 x i8], [1024 x i8]* @getShit.buff, i64 0, i64 0), i32 1024, i32* %12)
  %14 = load i32*, i32** %3, align 8
  %15 = call i32 @pclose(i32* %14)
  ret i8* getelementptr inbounds ([1024 x i8], [1024 x i8]* @getShit.buff, i64 0, i64 0)
}

declare dso_local i32* @popen(i8*, i8*) #1

declare dso_local i32 @perror(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @fgets(i8*, i32, i32*) #1

declare dso_local i32 @pclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
